# swarm

./: .clocignore  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cloc.sh  release.sh
.github/workflows/: docker-latest-frontend.yml  docker-latest-java.yml  docker-latest-rust.yml  docker-release-frontend.yml  docker-release-java.yml  docker-release-rust.yml
add-uuid/: Cargo.toml
add-uuid/src/: main.rs
ai-dataset/: .gitignore  package-lock.json  package.json  tsconfig.json
ai-dataset/src/: index.ts
app-docker/: docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml
app-docker/config/dev-migrations/2024/: 20241221200000-add-user.js
app-docker/config/dev-migrations/2025/: 20250105072600-add-service-account.js
app-docker/config/env-files/dev/: add-uuid.env  api.env  crawler.env  download.env  filter.env  frontend.env  job-manager.env  mongo_cli.env  nats.env  publish.env  sparql_cli.env
app-docker/config/job-manager/: definitions.json
app-docker/config/migrations/2025/: 202501110000-scheduled-jobs.js
app-docker/config/nats/: nats-server-dev.conf
app-docker/config/proxy/: nginx.conf
app-docker/config/proxy/http/: reverse.conf
app-docker/config/proxy/templates/: default.conf.template
app-docker/config/virtuoso/: virtuoso.ini
archive/: Cargo.toml
archive/src/: main.rs
cleanup/: Cargo.toml
cleanup/src/: main.rs
common/: Cargo.toml
common/src/: compress.rs  constant.rs  domain.rs  lib.rs  nats_client.rs  retry_fs.rs
common/src/mongo/: client.rs  mod.rs  repository.rs
crawler/: Cargo.toml  README.md
crawler/src/: main.rs  util.rs
diff/: Cargo.toml
diff/src/: main.rs
extractor/: Cargo.toml
extractor/src/: fix_stmt.rs  main.rs
filter/: Dockerfile  pom.xml
filter/src/main/java/be/bittich/filter/: AppRunner.java  FilterApplication.java
filter/src/main/java/be/bittich/filter/lib/: BaseConfig.java  Constant.java  JobModel.java  ModelUtils.java  NatsService.java  Node.java  ShaclService.java  UUIDv7.java
filter/src/main/resources/: application.properties
filter/src/test/java/be/bittich/filter/lib/: JobModelTest.java
frontend/: .env.development  .env.production  :  Dockerfile  env.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/pages/home/: flow.mmd  index.md
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthContext.tsx  authContextHook.ts
frontend/src/components/auth/: Login.tsx  Logout.tsx
frontend/src/components/jobs/: JobDetail.tsx  JobsTable.tsx  ScheduledJobsTable.tsx  SubTasksTable.tsx  TasksTable.tsx  UpsertScheduledJob.tsx
frontend/src/components/layout/: Favicon.css  Favicon.tsx  Layout.tsx
frontend/src/components/markdown/: MarkdownViewer.tsx
frontend/src/components/pages/: Home.tsx
frontend/src/components/search/: BatchTable.tsx  FilterBuilder.tsx  SearchContainer.tsx
frontend/src/components/sparql/: Sparql.tsx  YasguiCssDark.css  YasguiCssDefault.css  YasguiCssOverride.css
frontend/src/hooks/: is-mobile.ts  useMountEffect.ts
frontend/src/models/: domain.ts
frontend/src/routes/: ForbiddenInterceptor.tsx  ProtectedRoute.tsx  Router.tsx
frontend/src/states/: JobDefinitionSlice.ts  JobSlice.ts  RootReducer.ts  ScheduledJobSlice.ts  SearchSlice.ts  Store.ts  Store.type.ts  SuBTaskSlice.ts  ThemeSlice.ts
frontend/src/states/file/: Api.ts
index/: Cargo.toml  README.md
index/src/: config.rs  main.rs
job-manager/: Cargo.toml  README.md
job-manager/src/: domain.rs  main.rs  manager.rs
job-manager/src/api/: mod.rs  routes.rs
meilisearch_client/: Cargo.toml
meilisearch_client/src/: domain.rs  lib.rs
publish/: Cargo.toml
publish/src/: main.rs
retryable_fut/: Cargo.toml
retryable_fut/src/: lib.rs
sparql_client/: Cargo.toml  README.md
sparql_client/src/: lib.rs
sync-consumer/: Cargo.toml  README.md
sync-consumer/src/: main.rs
tests/job-manager/: test-job-manager.env  test.http
