
[workspace]
members = [ "add-uuid", "archive", "cleanup", "common","crawler", "diff", "extractor", "job-manager", "publish", "sparql_client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Nordine Bittich"]
description = "Swarm"
documentation = "https://github.com/nbittich/swarm"
repository = "https://github.com/nbittich/swarm"
rust-version = "1.83"
edition = "2021"
license = "MIT"

[workspace.dependencies]
log = "0.4.22"
lazy_static = "1.5.0"
scraper = "0.22.0"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
ego-tree = "0.10.0"
graph-rdfa-processor = "0.3.2"
serial_test = "3.2.0"
test-case = "3.3.1"
env_logger = "0.11.6"
tortank = "0.25.0"
tikv-jemallocator = "0.6.0"
tokio = "1.42.0"
reqwest="0.12.12"
tracing = "0.1.41"
tracing-subscriber="0.3.19"
chrono="0.4.39"
anyhow="1.0.95"
rand="0.8.5"
serde="1.0.217"
slab = "0.4.9"
serde_json="1.0.134"
async-nats="0.38.0"
mongodb="3.1.1"
futures="0.3.31"
async-trait="0.1.83"
bincode="1.3.3"
axum = "0.8.0"
axum-extra ="0.10.0" 
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
http-cache-reqwest="0.15.0"
reqwest-middleware="0.4.0"
mimalloc="0.1.43"
flate2="1.0.35"
async-compression="0.4.18"
moka="0.12.8"
itertools="0.14.0"
cron="0.14.0"
tokio-util = "0.7.13"
mime_guess = "2.0.5"
spargebra ="0.3.3"
swarm_common={version="0.1.0",path="./common"}
sparql_client={version="0.1.0",path="./sparql_client"}
[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
