
[workspace]
members = [ "add-uuid", "archive", "cleanup", "common","crawler", "diff", "extractor", "job-manager", "publish", "sparql_client", "sync-consumer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Nordine Bittich"]
description = "Swarm"
documentation = "https://github.com/nbittich/swarm"
repository = "https://github.com/nbittich/swarm"
rust-version = "1.85"
edition = "2024"
license = "MIT"

[workspace.dependencies]
log = "0.4.27"
lazy_static = "1.5.0"
scraper = "0.23.1"
url = "2.5.4"
uuid = { version = "1.16.0" }
regex = "1.11.1"
ego-tree = "0.10.0"
graph-rdfa-processor = "0.3.3"
serial_test = "3.2.0"
test-case = "3.3.1"
env_logger = "0.11.8"
tortank = "0.25.4"
async_zip = "0.0.17"
tikv-jemallocator = "0.6.0"
tokio = "1.44.2"
reqwest="0.12.15"
tracing = "0.1.41"
tracing-subscriber="0.3.19"
chrono="0.4.40"
anyhow="1.0.98"
rand="0.9.1"
serde="1.0.219"
slab = "0.4.9"
serde_json="1.0.140"
async-nats="0.40.0"
mongodb="3.2.3"
futures="0.3.31"
bincode="2.0.1"
axum = "0.8.3"
axum-extra ="0.10.1" 
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
http-cache-reqwest="0.15.1"
reqwest-middleware="0.4.2"
mimalloc="0.1.46"
flate2="1.1.1"
async-compression="0.4.23"
moka="0.12.10"
itertools="0.14.0"
cron="0.15.0"
tokio-util = "0.7.15"
mime_guess = "2.0.5"
spargebra ="0.3.5"
xxhash-rust="0.8.15"
bson="2.14.0"
trait-variant = "0.1.2"
async-trait = "0.1.88"
swarm_common={version="0.1.0",path="./common"}
sparql_client={version="0.1.0",path="./sparql_client"}

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
