[package]
name = "swarm_common"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-nats.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
uuid = { workspace = true, features = ["v4","v7"] }
regex.workspace = true
mongodb = {workspace=true}
# mimalloc={workspace=true, features=["secure"]}


