[package]
name = "job-manager"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono.workspace = true
rand.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs", "time"] }
swarm_common = { workspace = true }
axum = { workspace =true, features = ["multipart","macros"]}
axum-extra = { workspace = true, features = ["typed-header"] }
jsonwebtoken.workspace = true
serde.workspace = true
tokio-util.workspace=true
serde_json.workspace = true
bcrypt.workspace = true
cron.workspace = true
mime_guess.workspace=true
spargebra.workspace=true
sparql_client.workspace=true
