[package]
name = "swarm_meilisearch_client"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
swarm_retryable_fut.workspace=true
reqwest-middleware.workspace=true
http.workspace=true
async-trait.workspace=true

