[package]
name = "swarm_retryable_fut"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio={workspace=true, features=["time"]}
tracing.workspace = true
